--- a/app/src/main/res/layout/item_table_content.xml
+++ b/app/src/main/res/layout/item_table_content.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_content_item"
-    android:layout_width="68dp"
-    android:layout_height="32dp"
+    android:layout_width="120dp"
+    android:layout_height="52dp"
     android:gravity="center"
-    android:textColor="@android:color/black" />
+    android:textColor="@android:color/holo_red_dark"
+    android:background="@drawable/shape_item_content"/>
