--- a/app/src/main/res/layout/item_table_content.xml
+++ b/app/src/main/res/layout/item_table_content.xml
@@ -4,4 +4,4 @@
     android:layout_width="100dp"
     android:layout_height="52dp"
     android:gravity="center"
-    android:textColor="@android:color/holo_red_dark"/>
+    android:textColor="@android:color/white" />
